htmlに配列を渡せない

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <textarea name="contentfield" id="contentfield" cols="30" rows="10" placeholder="投稿内容を入力"></textarea><br>
         <input type="submit"><br>
     </form>
+    <p><a href="{list_link}">リストへ</a></p>
 </body>
 </html>
